updated header: cleaned up login/logout in component and removed black background to avoid block of color on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,6 @@ header {
     flex-wrap: wrap;
     align-items:center;
     justify-content: space-between;
-    background: black;
     width: 100%;
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
